--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-
-    <title>这里是网站标题</title>
+    <title>Nutssss | 一个热爱游戏的咸鱼</title>
     <meta name="description"
-        content="这里是网站介绍">
-    <meta name="keywords" content="这里是网站关键词">
+        content="我是一名高中生，喜欢计算机的咸鱼一条，经常抽出空余时间学习各种语言编程以及知识，虽然懂得不多，但是这是我最喜欢的爱好吧。同时也喜欢各种游戏，FPS我的强项！沉浸在这个完美的虚拟世界，起码能暂时忘掉这充满回忆该死的现实.">
+    <meta name="keywords" content="nutssss,坚果,主页,博客,tqy,xhj">
     <link rel="stylesheet" type="text/css" href="./css/FiraCode.css">
     <link rel="stylesheet" type="text/css" href="./css/nutssss.css">
     <link rel="icon" href="./favicon.ico">
@@ -23,7 +22,7 @@
             <div class="headPhoto"></div>
             <!-- 介绍 -->
             <div class="meBox-title">
-                <p>I'm N0tssss</p>
+                <p>I'm N0ts</p>
                 <div class="fg"></div>
             </div>
             <div class="meBox-text">
@@ -59,7 +58,7 @@
                     <span style="color: blue;">~</span>
                     <span style="color: rgb(39, 39, 39);">./tianqi.sh</span>
                     <br />
-                    <iframe scrolling="no" src="https://tianqiapi.com/api.php?style=tc&skin=pitaya" frameborder="0"
+                    <iframe scrolling="no" src="https://tianqiapi.com/api.php?style=tb&skin=pitaya" frameborder="0"
                         width="350" height="24" allowtransparency="true"></iframe>
                     <br />
                     <span style="color: rgb(0, 190, 0);">root@nutssss</span>
