--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <!-- 顶部标题 -->
                 <div class="title">
-                    <span>lovezx - bash</span>
+                    <span>love - bash</span>
                 </div>
                 <!-- 终端内文字 -->
                 <div class="cmdText">
@@ -89,7 +89,7 @@
                 </div>
                 <!-- 顶部标题 -->
                 <div class="title">
-                    <span>lovezx - bash</span>
+                    <span>love - bash</span>
                 </div>
                 <!-- 终端内文字 -->
                 <div class="cmdText">
