--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <title>这里是网站标题</title>
+    <title>zx | 个人主页</title>
     <meta name="description"
         content="这里是网站介绍">
     <meta name="keywords" content="这里是网站关键词">
@@ -112,8 +112,8 @@
     </div>
 
     <!-- 页脚 -->
-    <div id="footer">
-        <p>© 2020 zhangxin | <a href="http://beian.miit.gov.cn">皖ICP备2021018914号</a></p>
+    <div id="footer"  >
+        <p> © 2020 zhangxin | <a href="http://beian.miit.gov.cn">皖ICP备2021018914号</a></p>
 <!--        <p>THEME MADE BY <a href="https://zhangxin.cn/">zhangxin</a></p>-->
     </div>
 </body>
