--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                 </div>
                 <!-- 终端内文字 -->
                 <div class="cmdText">
-                    <span style="color: rgb(0, 190, 0);">root@zhangxin</span>
+                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
                     <span style="color: blue;">~</span>
                     <span style="color: rgb(39, 39, 39);">./tianqi.sh</span>
                     <br />
                     <iframe scrolling="no" src="https://tianqiapi.com/api.php?style=tb&skin=pitaya" frameborder="0"
                         width="350" height="24" allowtransparency="true"></iframe>
                     <br />
-                    <span style="color: rgb(0, 190, 0);">root@zhangxin</span>
+                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
                     <span style="color: blue;">~</span>
                     <span style="color: rgb(39, 39, 39);">cat /me.txt</span>
                     <p>想到再说~</p>
@@ -74,7 +74,7 @@
 <!--                    <p>在我眼里</p>-->
 <!--                    <p>没有什么问题是尝试不能解决的，如果有那就多尝试几次甚至上百次</p>-->
 <!--                    <p>即使前方的路看似绝境，也要有硬生生给自己开出一条路的勇气</p>-->
-                    <span style="color: rgb(0, 190, 0);">root@zhangxin</span>
+                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
                     <span style="color: blue;">~</span>
                     <span style="color: rgb(39, 39, 39);">sudo rm -rf /过去的不足/*</span>
                 </div>
@@ -93,7 +93,7 @@
                 </div>
                 <!-- 终端内文字 -->
                 <div class="cmdText">
-                    <span style="color: rgb(0, 190, 0);">root@zhangxin</span>
+                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
                     <span style="color: blue;">~</span>
                     <span style="color: rgb(39, 39, 39);">./links.sh</span>
                     <p>我的其他站点：</p>
@@ -104,7 +104,7 @@
 <!--                        <li><a href="https://mc.zhangxin.cn/">Mc</a></li>-->
 <!--                        <li><a href="https://mc.zhangxin.cn/blog/">McBlog</a></li>-->
                     </ul>
-                    <span style="color: rgb(0, 190, 0);">root@zhangxin</span>
+                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
                     <span style="color: blue;">~</span>
                 </div>
             </div>
