--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <title>zx | 个人主页</title>
+    <title>zx's home</title>
     <meta name="description"
         content="这里是网站介绍">
     <meta name="keywords" content="这里是网站关键词">
@@ -51,7 +51,7 @@
                 </div>
                 <!-- 顶部标题 -->
                 <div class="title">
-                    <span>love - bash</span>
+                    <span>love <img src="./img/001.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"> bash</span>
                 </div>
                 <!-- 终端内文字 -->
                 <div class="cmdText">
@@ -89,7 +89,7 @@
                 </div>
                 <!-- 顶部标题 -->
                 <div class="title">
-                    <span>love - bash</span>
+                    <span>love <img src="./img/001.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"> bash</span>
                 </div>
                 <!-- 终端内文字 -->
                 <div class="cmdText">
