--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <!-- 顶部标题 -->
                 <div class="title">
-                    <span>love <img src="./img/001.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"> bash</span>
+                    <span>love <img src="https://img-blog.csdnimg.cn/39c0b60f02214742914437d249d3415b.png#pic_center" alt="" style="width: 20px; vertical-align: middle;"> bash</span>
                 </div>
                 <!-- 终端内文字 -->
                 <div class="cmdText">
@@ -89,7 +89,7 @@
                 </div>
                 <!-- 顶部标题 -->
                 <div class="title">
-                    <span>love <img src="./img/001.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"> bash</span>
+                    <span>love <img src="https://img-blog.csdnimg.cn/39c0b60f02214742914437d249d3415b.png#pic_center"  style="width: 20px; vertical-align: middle;"> bash</span>
                 </div>
                 <!-- 终端内文字 -->
                 <div class="cmdText">
