--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="headPhoto"></div>
             <!-- 介绍 -->
             <div class="meBox-title">
-                <p>想到再说~</p>
+                <p>一名死肥宅~</p>
                 <div class="fg"></div>
             </div>
             <div class="meBox-text">
