--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                 <div class="cmdText">
                     <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
 <!--                    <span style="color: blue;">~</span>-->
-                    <span style="color: rgb(39, 39, 39);">./tianqi.sh</span>
+                    <span style="color: blue;">./tianqi.sh</span>
                     <br />
                     <iframe scrolling="no" src="https://tianqiapi.com/api.php?style=tb&skin=pitaya" frameborder="0"
                         width="350" height="24" allowtransparency="true"></iframe>
                     <br />
                     <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
 <!--                    <span style="color: blue;">~</span>-->
-                    <span style="color: rgb(39, 39, 39);">cat /me.txt</span>
+                    <span style="color: blue;">cat /me.txt</span>
                     <p>想到再说~</p>
 <!--                    <p>爱好计算机，会去自学自己感兴趣的一切东西</p>-->
 <!--                    <p>略懂H5，C#开发；爱好折腾去解决一切问题</p>-->
@@ -76,7 +76,7 @@
 <!--                    <p>即使前方的路看似绝境，也要有硬生生给自己开出一条路的勇气</p>-->
                     <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
 <!--                    <span style="color: blue;">~</span>-->
-                    <span style="color: rgb(39, 39, 39);">sudo rm -rf /过去的不足/*</span>
+                    <span style="color: blue">sudo rm -rf /过去的不足/*</span>
                 </div>
             </div>
             <!-- 第二个终端 -->
@@ -95,7 +95,7 @@
                 <div class="cmdText">
                     <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
 <!--                    <span style="color: blue;">~</span>-->
-                    <span style="color: rgb(39, 39, 39);">./links.sh</span>
+                    <span style="color: blue">./links.sh</span>
                     <p>我的其他站点：</p>
                     <ul class="ul">
                         <li><a href="https://zx.js.cool/">Blog</a></li>
@@ -104,6 +104,18 @@
 <!--                        <li><a href="https://mc.zhangxin.cn/">Mc</a></li>-->
 <!--                        <li><a href="https://mc.zhangxin.cn/blog/">McBlog</a></li>-->
                     </ul>
+                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
+                    <span style="color: blue;">vim /寄语.md</span>
+                    <p></p>
+
+<!--                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>-->
+<!--                    <span style="color: blue;">echo</span>-->
+
+                    <p>我们终将毁灭于我们所热爱的东西，而且所有那些看起来很爽的东西都是瞬间的那种满足。而人类所有真实的快乐，一定是恒久的努力。
+
+                        ——罗翔</p>
+<!--                    <p> > 寄语.text</p>-->
+
                     <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
 <!--                    <span style="color: blue;">~</span>-->
                 </div>
