--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <br />
                     <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
 <!--                    <span style="color: blue;">~</span>-->
-                    <span style="color: blue;">cat /me.txt</span>
+                    <span style="color: blue;">cat me.txt</span>
                     <p>想到再说~</p>
 <!--                    <p>爱好计算机，会去自学自己感兴趣的一切东西</p>-->
 <!--                    <p>略懂H5，C#开发；爱好折腾去解决一切问题</p>-->
@@ -105,15 +105,19 @@
 <!--                        <li><a href="https://mc.zhangxin.cn/blog/">McBlog</a></li>-->
                     </ul>
                     <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
-                    <span style="color: blue;">vim /寄语.md</span>
-                    <p></p>
+                    <span style="color: blue;">vim 寄语.md</span>
+                    <p>我们终将毁灭于我们所热爱的东西，而且所有那些看起来很爽的东西都是瞬间的那种满足。而人类所有真实的快乐，一定是恒久的努力。
+
+                        ---罗翔</p>
+                    <p style="color: blue;">~</p>
+                    <p style="color: blue;">~</p>
+                    <p style="color: blue;">~</p>
+                    <p style="color: blue;">~</p>
 
 <!--                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>-->
 <!--                    <span style="color: blue;">echo</span>-->
 
-                    <p>我们终将毁灭于我们所热爱的东西，而且所有那些看起来很爽的东西都是瞬间的那种满足。而人类所有真实的快乐，一定是恒久的努力。
 
-                        ---罗翔</p>
 <!--                    <p> > 寄语.text</p>-->
 
                     <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
