--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             </div>
             <!-- 两个按钮 -->
             <div class="meBox-Button">
-                <a href="#">关于</a>
-                <a href="http://wpa.qq.com/msgrd?v=3&uin=1205362172&site=qq&menu=yes">联系</a>
+                <a style="color: rgb(160, 32, 240)" href="#">关于</a>
+                <a style="color: rgb(160, 32, 240)" href="http://wpa.qq.com/msgrd?v=3&uin=1205362172&site=qq&menu=yes">联系</a>
             </div>
         </div>
 
@@ -98,8 +98,8 @@
                     <span style="color: blue">./links.sh</span>
                     <p>我的其他站点：</p>
                     <ul class="ul">
-                        <li><a href="https://zx.js.cool/">Blog</a></li>
-                        <li><a href="https://zxgame.vercel.app/">Game</a></li>
+                        <li><a style="color: rgb(255, 20, 147)" href="https://zx.js.cool/">Blog</a></li>
+                        <li><a style="color: rgb(255, 20, 147)" href="https://zxgame.vercel.app/">Game</a></li>
 <!--                        <li><a href="https://note.zhangxin.cn/">Note</a></li>-->
 <!--                        <li><a href="https://mc.zhangxin.cn/">Mc</a></li>-->
 <!--                        <li><a href="https://mc.zhangxin.cn/blog/">McBlog</a></li>-->
