--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="cmdText">
                     <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
 <!--                    <span style="color: blue;">~</span>-->
-                    <span style="color: blue">java Link</span>
+                    <span style="color: blue">java LinkList</span>
 <!--                    <span style="color: blue">./links.sh</span>-->
                     <p>我的其他站点：</p>
                     <ul class="ul">
