--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             <div class="headPhoto"></div>
             <!-- 介绍 -->
             <div class="meBox-title">
-                <p>一名死肥宅~</p>
+                <p>知行合一</p>
                 <div class="fg"></div>
             </div>
             <div class="meBox-text">
 <!--                <p>不是一条咸鱼<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>-->
-                <p>想到再说~</p>
+                <p>人类所有真实的快乐，一定是恒久的努力</p>
 <!--                <p>上了年纪，不爱说话~</p>-->
 <!--                <p>上了年纪，不爱说话~</p>-->
 <!--                <p>最爱<img src="./img/002.png" alt="冰激凌" style="width: 15px; vertical-align: middle;"></p>-->
@@ -65,7 +65,8 @@
                     <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
 <!--                    <span style="color: blue;">~</span>-->
                     <span style="color: blue;">cat me.txt</span>
-                    <p>想到再说~</p>
+                    <p>单身27，不胖不瘦。</p>
+                    <p>坐标杭州，Java开发工程师。</p>
 <!--                    <p>爱好计算机，会去自学自己感兴趣的一切东西</p>-->
 <!--                    <p>略懂H5，C#开发；爱好折腾去解决一切问题</p>-->
 <!--                    <p>同时我也很喜欢玩硬件，raspberry是我的最爱</p>-->
@@ -107,10 +108,13 @@
                     </ul>
                     <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
                     <span style="color: blue;">vim 寄语.md</span>
-                    <p>我们终将毁灭于我们所热爱的东西，而且所有那些看起来很爽的东西都是瞬间的那种满足。而人类所有真实的快乐，一定是恒久的努力。
-
-                        ---罗翔</p>
+                    <p>我们终将毁灭于我们所热爱的东西，而且所有那些看起来很爽的东西都是瞬间的那种满足。而人类所有真实的快乐，一定是恒久的努力。 ---罗翔</p>
                     <p style="color: blue;">~</p>
+<!--                    <p>万事开头难的意思是，只是开头难点，后面熟练了就不难了。无他，唯手熟尔。勿毕其功于一役。</p>-->
+<!--                    <p style="color: blue;">~</p>-->
+<!--                    <p>人生的本质就是不断的解决问题，人生就像一部电视剧，20多集的疑惑在30集自然能找到答案。</p>-->
+<!--                    <p style="color: blue;">~</p>-->
+                    <p>法治不诛心，诛心非法治。法家不察人心善恶，只观言行是否合法。</p>
                     <p style="color: blue;">~</p>
                     <p style="color: blue;">~</p>
                     <p style="color: blue;">~</p>
