--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                     <p style="color: blue;">~</p>
                     <p>Just do it, don't think too much. 尽人事，听天命。</p>
                     <p style="color: blue;">~</p>
-                    <p>~</p>
+                    <p>Never really desperate, only the lost of the soul. 从来没有真正的绝境, 只有心灵的迷途</p>
+                    <p style="color: blue;">~</p>
                     <p style="color: blue;">~</p>
                     <p style="color: blue;">~</p>
 
