--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             <div class="headPhoto"></div>
             <!-- 介绍 -->
             <div class="meBox-title">
-                <p>知行合一</p>
+                <p>I'm ZhangXin</p>
                 <div class="fg"></div>
             </div>
             <div class="meBox-text">
 <!--                <p>不是一条咸鱼<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>-->
-                <p>人类所有真实的快乐，一定是恒久的努力</p>
+                <p>知行合一.</p>
 <!--                <p>上了年纪，不爱说话~</p>-->
 <!--                <p>上了年纪，不爱说话~</p>-->
 <!--                <p>最爱<img src="./img/002.png" alt="冰激凌" style="width: 15px; vertical-align: middle;"></p>-->
