--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-        content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+          content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>zx's home</title>
     <meta name="description"
-        content="这里是网站介绍">
+          content="这里是网站介绍">
     <meta name="keywords" content="这里是网站关键词">
     <link rel="stylesheet" type="text/css" href="./css/FiraCode.css">
     <link rel="stylesheet" type="text/css" href="./css/nutssss.css">
@@ -15,132 +15,143 @@
 </head>
 
 <body>
-    <div id="box">
-        <!-- 个人资料卡片 -->
-        <div class="meBox">
-            <!-- 头像 -->
-            <div class="headPhoto"></div>
-            <!-- 介绍 -->
-            <div class="meBox-title">
-                <p>I'm ZhangXin</p>
-                <div class="fg"></div>
-            </div>
-            <div class="meBox-text">
-<!--                <p>不是一条咸鱼<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>-->
-                <p>知行合一.</p>
-<!--                <p>上了年纪，不爱说话~</p>-->
-<!--                <p>上了年纪，不爱说话~</p>-->
-<!--                <p>最爱<img src="./img/002.png" alt="冰激凌" style="width: 15px; vertical-align: middle;"></p>-->
-            </div>
-            <!-- 两个按钮 -->
-            <div class="meBox-Button">
-                <a style="color: rgb(160, 32, 240)" href="#">关于</a>
-                <a style="color: rgb(160, 32, 240)" href="http://wpa.qq.com/msgrd?v=3&uin=1205362172&site=qq&menu=yes">联系</a>
-            </div>
+<div id="box">
+    <!-- 个人资料卡片 -->
+    <div class="meBox">
+        <!-- 头像 -->
+        <div class="headPhoto"></div>
+        <!-- 介绍 -->
+        <div class="meBox-title">
+            <p>I'm ZhangXin</p>
+            <div class="fg"></div>
         </div>
+        <div class="meBox-text">
+            <!--                <p>不是一条咸鱼<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>-->
+            <p>知行合一.</p>
+            <!--                <p>上了年纪，不爱说话~</p>-->
+            <!--                <p>上了年纪，不爱说话~</p>-->
+            <!--                <p>最爱<img src="./img/002.png" alt="冰激凌" style="width: 15px; vertical-align: middle;"></p>-->
+        </div>
+        <!-- 两个按钮 -->
+        <div class="meBox-Button">
+            <a style="color: rgb(160, 32, 240)" href="#">关于</a>
+            <a style="color: rgb(160, 32, 240)"
+               href="http://wpa.qq.com/msgrd?v=3&uin=1205362172&site=qq&menu=yes">联系</a>
+        </div>
+    </div>
 
-        <!-- 伪终端介绍 -->
-        <div id="cmdBox">
-            <!-- 第一个终端 -->
-            <div class="cmd">
-                <!-- 三个按钮 -->
-                <div class="click">
-                    <div class="red"></div>
-                    <div class="yellow"></div>
-                    <div class="green"></div>
-                </div>
-                <!-- 顶部标题 -->
-                <div class="title">
-                    <span>love <img src="https://img-blog.csdnimg.cn/6a080bf277064412acbd45f0a2aa0c80.png#pic_center" alt="" style="width: 20px; vertical-align: middle;"> bash</span>
-                </div>
-                <!-- 终端内文字 -->
-                <div class="cmdText">
-                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
-<!--                    <span style="color: blue;">~</span>-->
-                    <span style="color: blue;">./tianqi.sh</span>
-                    <br />
-                    <iframe scrolling="no" src="https://tianqiapi.com/api.php?style=tb&skin=pitaya" frameborder="0"
+    <!-- 伪终端介绍 -->
+    <div id="cmdBox">
+        <!-- 第一个终端 -->
+        <div class="cmd">
+            <!-- 三个按钮 -->
+            <div class="click">
+                <div class="red"></div>
+                <div class="yellow"></div>
+                <div class="green"></div>
+            </div>
+            <!-- 顶部标题 -->
+            <div class="title">
+                <span>love <img src="https://img-blog.csdnimg.cn/6a080bf277064412acbd45f0a2aa0c80.png#pic_center" alt=""
+                                style="width: 20px; vertical-align: middle;"> bash</span>
+            </div>
+            <!-- 终端内文字 -->
+            <div class="cmdText">
+                <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
+                <!--                    <span style="color: blue;">~</span>-->
+                <span style="color: blue;">./tianqi.sh</span>
+                <br/>
+                <iframe scrolling="no" src="https://tianqiapi.com/api.php?style=tb&skin=pitaya" frameborder="0"
                         width="350" height="24" allowtransparency="true"></iframe>
-                    <br />
-                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
-<!--                    <span style="color: blue;">~</span>-->
-                    <span style="color: blue;">cat me.txt</span>
-                    <p>单身27，不胖不瘦。</p>
-                    <p>坐标杭州，Java开发工程师。</p>
-<!--                    <p>爱好计算机，会去自学自己感兴趣的一切东西</p>-->
-<!--                    <p>略懂H5，C#开发；爱好折腾去解决一切问题</p>-->
-<!--                    <p>同时我也很喜欢玩硬件，raspberry是我的最爱</p>-->
-<!--                    <p>这条路我才刚刚迈开了我的第一步</p>-->
-<!--                    <p>路上的坎一定会非常多，但</p>-->
-<!--                    <p>在我眼里</p>-->
-<!--                    <p>没有什么问题是尝试不能解决的，如果有那就多尝试几次甚至上百次</p>-->
-<!--                    <p>即使前方的路看似绝境，也要有硬生生给自己开出一条路的勇气</p>-->
-                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
-<!--                    <span style="color: blue;">~</span>-->
-                    <span style="color: blue">sudo rm -rf /过去的不足/*</span>
-                </div>
+                <br/>
+                <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
+                <!--                    <span style="color: blue;">~</span>-->
+                <span style="color: blue;">cat me.txt</span>
+                <p>单身27，不胖不瘦。</p>
+                <p>坐标杭州，Java开发工程师。</p>
+                <!--                    <p>爱好计算机，会去自学自己感兴趣的一切东西</p>-->
+                <!--                    <p>略懂H5，C#开发；爱好折腾去解决一切问题</p>-->
+                <!--                    <p>同时我也很喜欢玩硬件，raspberry是我的最爱</p>-->
+                <!--                    <p>这条路我才刚刚迈开了我的第一步</p>-->
+                <!--                    <p>路上的坎一定会非常多，但</p>-->
+                <!--                    <p>在我眼里</p>-->
+                <!--                    <p>没有什么问题是尝试不能解决的，如果有那就多尝试几次甚至上百次</p>-->
+                <!--                    <p>即使前方的路看似绝境，也要有硬生生给自己开出一条路的勇气</p>-->
+                <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
+                <!--                    <span style="color: blue;">~</span>-->
+                <span style="color: blue">sudo rm -rf /过去的不足/*</span>
             </div>
-            <!-- 第二个终端 -->
-            <div class="cmd cmd2">
-                <!-- 三个按钮 -->
-                <div class="click">
-                    <div class="red"></div>
-                    <div class="yellow"></div>
-                    <div class="green"></div>
-                </div>
-                <!-- 顶部标题 -->
-                <div class="title">
-                    <span>love <img src="https://img-blog.csdnimg.cn/6a080bf277064412acbd45f0a2aa0c80.png#pic_center"  style="width: 20px; vertical-align: middle;"> bash</span>
-                </div>
-                <!-- 终端内文字 -->
-                <div class="cmdText">
-                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
-<!--                    <span style="color: blue;">~</span>-->
-                    <span style="color: blue">java LinkList</span>
-<!--                    <span style="color: blue">./links.sh</span>-->
-                    <p>我的其他站点：</p>
-                    <ul class="ul">
-                        <li><a style="color: rgb(255, 20, 147)" href="https://zx.js.cool/">Blog</a></li>
-                        <li><a style="color: rgb(255, 20, 147)" href="https://zxgame.vercel.app/">Game</a></li>
-<!--                        <li><a href="https://note.zhangxin.cn/">Note</a></li>-->
-<!--                        <li><a href="https://mc.zhangxin.cn/">Mc</a></li>-->
-<!--                        <li><a href="https://mc.zhangxin.cn/blog/">McBlog</a></li>-->
-                    </ul>
-                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
-                    <span style="color: blue;">vim 寄语.md</span>
-                    <p>我们终将毁灭于我们所热爱的东西，而且所有那些看起来很爽的东西都是瞬间的那种满足。而人类所有真实的快乐，一定是恒久的努力。 ---罗翔</p>
-                    <p style="color: blue;">~</p>
-<!--                    <p>万事开头难的意思是，只是开头难点，后面熟练了就不难了。无他，唯手熟尔。勿毕其功于一役。</p>-->
-<!--                    <p style="color: blue;">~</p>-->
-<!--                    <p>人生的本质就是不断的解决问题，人生就像一部电视剧，20多集的疑惑在30集自然能找到答案。</p>-->
-<!--                    <p style="color: blue;">~</p>-->
-                    <p>法治不诛心，诛心非法治。法家不察人心善恶，只观言行是否合法。 ---《大秦帝国》</p>
-                    <p style="color: blue;">~</p>
-                    <p>Just do it, don't think too much. 尽人事，听天命。</p>
-                    <p style="color: blue;">~</p>
-                    <p>Never really desperate, only the lost of the soul. 从来没有真正的绝境, 只有心灵的迷途</p>
-                    <p style="color: blue;">~</p>
-                    <p style="color: blue;">~</p>
-                    <p style="color: blue;">~</p>
+        </div>
+        <!-- 第二个终端 -->
+        <div class="cmd cmd2">
+            <!-- 三个按钮 -->
+            <div class="click">
+                <div class="red"></div>
+                <div class="yellow"></div>
+                <div class="green"></div>
+            </div>
+            <!-- 顶部标题 -->
+            <div class="title">
+                <span>love <img src="https://img-blog.csdnimg.cn/6a080bf277064412acbd45f0a2aa0c80.png#pic_center"
+                                style="width: 20px; vertical-align: middle;"> bash</span>
+            </div>
+            <!-- 终端内文字 -->
+            <div class="cmdText">
+                <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
+                <!--                    <span style="color: blue;">~</span>-->
+                <span style="color: blue">java LinkList</span>
+                <!--                    <span style="color: blue">./links.sh</span>-->
+                <p>我的其他站点：</p>
+                <ul class="ul">
+                    <li><a style="color: rgb(255, 20, 147)" href="https://zx.js.cool/">Blog</a></li>
+                    <li><a style="color: rgb(255, 20, 147)" href="https://zxgame.vercel.app/">Game</a></li>
+                    <!--                        <li><a href="https://note.zhangxin.cn/">Note</a></li>-->
+                    <!--                        <li><a href="https://mc.zhangxin.cn/">Mc</a></li>-->
+                    <!--                        <li><a href="https://mc.zhangxin.cn/blog/">McBlog</a></li>-->
+                </ul>
+                <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
+                <span style="color: blue;">vim 寄语.md</span>
+                <p>我们终将毁灭于我们所热爱的东西，而且所有那些看起来很爽的东西都是瞬间的那种满足。而人类所有真实的快乐，一定是恒久的努力。 ---罗翔</p>
+                <p style="color: blue;">~</p>
+                <!--                    <p>万事开头难的意思是，只是开头难点，后面熟练了就不难了。无他，唯手熟尔。勿毕其功于一役。</p>-->
+                <!--                    <p style="color: blue;">~</p>-->
+                <!--                    <p>人生的本质就是不断的解决问题，人生就像一部电视剧，20多集的疑惑在30集自然能找到答案。</p>-->
+                <!--                    <p style="color: blue;">~</p>-->
+                <p>法治不诛心，诛心非法治。法家不察人心善恶，只观言行是否合法。 ---《大秦帝国》</p>
+                <p style="color: blue;">~</p>
+                <p>Just do it, don't think too much. 尽人事，听天命。</p>
+                <p style="color: blue;">~</p>
+                <p>Never really desperate, only the lost of the soul. 从来没有真正的绝境, 只有心灵的迷途</p>
+                <p style="color: blue;">~</p>
+                <p style="color: blue;">~</p>
+                <p style="color: blue;">~</p>
 
-<!--                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>-->
-<!--                    <span style="color: blue;">echo</span>-->
+                <!--                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>-->
+                <!--                    <span style="color: blue;">echo</span>-->
 
 
-<!--                    <p> > 寄语.text</p>-->
+                <!--                    <p> > 寄语.text</p>-->
 
-                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
-<!--                    <span style="color: blue;">~</span>-->
-                </div>
+                <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
+                <!--                    <span style="color: blue;">~</span>-->
             </div>
         </div>
     </div>
+</div>
 
-    <!-- 页脚 -->
-    <div id="footer"  >
-        <p> © 2022 zhangxin | <a href="http://beian.miit.gov.cn">皖ICP备2021018914号</a></p>
-<!--        <p>THEME MADE BY <a href="https://zhangxin.cn/">zhangxin</a></p>-->
-    </div>
+<!-- 页脚 -->
+<div id="footer">
+    <p> © 2022 zhangxin | <a href="http://beian.miit.gov.cn">皖ICP备2021018914号</a></p>
+    <!--        <p>THEME MADE BY <a href="https://zhangxin.cn/">zhangxin</a></p>-->
+</div>
+
+<audio autoplay id="msc" src="https://api.uomg.com/api/rand.music?sort=any">
+</audio>
+<script>
+    document.documentElement.addEventListener("click", function () {
+        msc.play();
+    });
+</script>
 </body>
 
 </html>
