--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                 <!--                    <p>即使前方的路看似绝境，也要有硬生生给自己开出一条路的勇气</p>-->
                 <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
                 <!--                    <span style="color: blue;">~</span>-->
-                <span style="color: blue">sudo rm -rf /过去的不足/*</span>
+                <span style="color: blue">sudo rm -rf /所有的缺点和不足/*</span>
+                <p><span style="color: rgb(238, 154, 0)">Warning: </span><span>做人不要太贪心~</span></p>
             </div>
         </div>
         <!-- 第二个终端 -->
