--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
                 <!--                    <span style="color: blue;">~</span>-->
                 <span style="color: blue;">cat me.txt</span>
-                <p>单身27，不胖不瘦，热爱健身。</p>
+                <p>单身27，不胖不瘦，热爱健身，热爱程序架构设计。</p>
                 <p>坐标杭州，Java开发工程师。</p>
                 <!--                    <p>爱好计算机，会去自学自己感兴趣的一切东西</p>-->
                 <!--                    <p>略懂H5，C#开发；爱好折腾去解决一切问题</p>-->
