--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <!--                    <p style="color: blue;">~</p>-->
                 <!--                    <p>人生的本质就是不断的解决问题，人生就像一部电视剧，20多集的疑惑在30集自然能找到答案。</p>-->
                 <!--                    <p style="color: blue;">~</p>-->
-                <p>法治不诛心，诛心非法治。法家不察人心善恶，只观言行是否合法。 ---《大秦帝国》</p>
+                <p>法治不诛心，诛心非法治。法家不察人心善恶，只观言行是否合法。</p>
                 <p style="color: blue;">~</p>
                 <p>Just do it, don't think too much. 尽人事，听天命。</p>
                 <p style="color: blue;">~</p>
