--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
                 </ul>
                 <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
                 <span style="color: blue;">vim 寄语.md</span>
-                <p>我们终将毁灭于我们所热爱的东西，而且所有那些看起来很爽的东西都是瞬间的那种满足。而人类所有真实的快乐，一定是恒久的努力。 ---罗翔</p>
-                <p style="color: blue;">~</p>
                 <!--                    <p>万事开头难的意思是，只是开头难点，后面熟练了就不难了。无他，唯手熟尔。勿毕其功于一役。</p>-->
                 <!--                    <p style="color: blue;">~</p>-->
                 <!--                    <p>人生的本质就是不断的解决问题，人生就像一部电视剧，20多集的疑惑在30集自然能找到答案。</p>-->
                 <!--                    <p style="color: blue;">~</p>-->
-                <p>法治不诛心，诛心非法治。法家不察人心善恶，只观言行是否合法。</p>
+                <p>法治不诛心，诛心非法治。</p>
                 <p style="color: blue;">~</p>
-                <p>Just do it, don't think too much. 尽人事，听天命。</p>
+                <p>人类所有真实的快乐，一定是恒久的努力。</p>
                 <p style="color: blue;">~</p>
-                <p>Never really desperate, only the lost of the soul. 从来没有真正的绝境, 只有心灵的迷途。</p>
+                <p>Just do it, do not think more. </p>
+                <p style="color: blue;">~</p>
+                <p>Never really desperate, only the lost of the soul. </p>
                 <p style="color: blue;">~</p>
                 <p style="color: blue;">~</p>
                 <p style="color: blue;">~</p>
