--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                 <ul class="ul">
                     <li><a style="color: rgb(255, 20, 147)" href="https://zx.js.cool/">Blog</a></li>
                     <li><a style="color: rgb(255, 20, 147)" href="https://zxgame.vercel.app/">Game</a></li>
+                    <li><a style="color: rgb(255, 20, 147)" href="https://zxvideo.vercel.app/">Video</a></li>
                     <!--                        <li><a href="https://note.zhangxin.cn/">Note</a></li>-->
                     <!--                        <li><a href="https://mc.zhangxin.cn/">Mc</a></li>-->
                     <!--                        <li><a href="https://mc.zhangxin.cn/blog/">McBlog</a></li>-->
