--- a/index.html
+++ b/index.html
@@ -12,6 +12,38 @@
     <link rel="stylesheet" type="text/css" href="./css/FiraCode.css">
     <link rel="stylesheet" type="text/css" href="./css/nutssss.css">
     <link rel="icon" href="./favicon.ico">
+
+    <style type="text/css">
+        /* 滚动条 */
+        ::-webkit-scrollbar-thumb {
+            background-color: #b700ff;
+            background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .4) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .4) 50%, rgba(255, 255, 255, .4) 75%, transparent 75%, transparent);
+            border-radius: 5px;
+        }
+
+        ::-webkit-scrollbar-track {
+            background-color: #eeeeee;
+            border-radius: 5px;
+        }
+
+        ::-webkit-scrollbar {
+            width: 8px;
+            height: 8px;
+        }
+
+        /*鼠标样式开始*/
+        /*鼠标指针样式*/
+        body {
+            cursor: url("curs/arrow.cur"), default;
+        }
+
+        /*鼠标链接指针样式*/
+        a:hover {
+            cursor: url("curs/hand.cur"), pointer;
+        }
+
+        /*鼠标样式结束*/
+    </style>
 </head>
 
 <body>
