--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <!-- 两个按钮 -->
         <div class="meBox-Button">
-            <a style="color: rgb(160, 32, 240)" href="#">关于</a>
+            <a style="color: rgb(160, 32, 240)" href="#">点我</a>
             <a style="color: rgb(160, 32, 240)"
                href="http://wpa.qq.com/msgrd?v=3&uin=1205362172&site=qq&menu=yes">联系</a>
         </div>
