--- a/index.html
+++ b/index.html
@@ -13,15 +13,6 @@
     <link rel="stylesheet" type="text/css" href="./css/nutssss.css">
     <link rel="icon" href="./favicon.ico">
 
-    <style>
-        .test {
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -o-user-select: none;
-            user-select: none;
-        }
-    </style>
-    <div class="test" onselectstart="return false;" unselectable="on"></div>
 
     <style type="text/css">
         /* 滚动条 */
@@ -56,7 +47,7 @@
     </style>
 </head>
 
-<body>
+<body  onselectstart="return false;">
 <div id="box">
     <!-- 个人资料卡片 -->
     <div class="meBox">
@@ -406,16 +397,6 @@
 
 
 </script>
-
-<style>
-    .test {
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -o-user-select: none;
-        user-select: none;
-    }
-</style>
-<div class="test" onselectstart="return false;" unselectable="on"></div>
 
 
 </body>
