--- a/index.html
+++ b/index.html
@@ -60,7 +60,19 @@
         </div>
         <div class="meBox-text">
             <!--                <p>不是一条咸鱼<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>-->
-            <p>知行合一.</p>
+<!--            <p>知行合一.</p>-->
+            <p>雨声潺潺，</p>
+
+            <p>像住在溪边，</p>
+
+            <p>   宁愿天天下雨，</p>
+
+            <p>   以为你是因为下雨不来。</p>
+
+            <p>   ——张爱玲</p>
+<!--            <p>醒来万物皆是沉寂，唯有你是世间的一抹旖旎，他人困于山中晨雾，我困于你.</p>-->
+<!--            <p>对待自己温柔一点。你只不过是宇宙的孩子，与植物、星辰没什么两样。</p>-->
+<!--            <p>时间总是一点一点流逝，切不可辜负人间。</p>-->
             <!--                <p>上了年纪，不爱说话~</p>-->
             <!--                <p>上了年纪，不爱说话~</p>-->
             <!--                <p>最爱<img src="./img/002.png" alt="冰激凌" style="width: 15px; vertical-align: middle;"></p>-->
