--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         /*鼠标样式开始*/
         /*鼠标指针样式*/
         body {
-            cursor: url("curs/arrow.cur"), default;
+            cursor: url("curs/normal.cur"), default;
         }
 
         /*鼠标链接指针样式*/
         a:hover {
-            cursor: url("curs/hand.cur"), pointer;
+            cursor: url("curs/link.cur"), pointer;
         }
 
         /*鼠标样式结束*/
