--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <!--                    <span style="color: blue">./links.sh</span>-->
                 <p>我的其他站点：</p>
                 <ul class="ul">
-                    <li><a style="color: rgb(255, 20, 147)" href="https://zx.js.cool/">Blog</a></li>
+                    <li><a style="color: rgb(255, 20, 147)" href="https://zxblog.eu.org/">Blog</a></li>
                     <li><a style="color: rgb(255, 20, 147)" href="https://zxgame.vercel.app/">Game</a></li>
                     <li><a style="color: rgb(255, 20, 147)" href="https://zxvideo.vercel.app/">Video</a></li>
                     <!--                        <li><a href="https://note.zhangxin.cn/">Note</a></li>-->
