--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 </head>
 
 <body  onselectstart="return false;">
+
+<script type="text/javascript" src="//js.users.51.la/21415143.js"></script>
+
 <div id="box">
     <!-- 个人资料卡片 -->
     <div class="meBox">
