--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <body  onselectstart="return false;">
 
-<script type="text/javascript" src="//js.users.51.la/21415159.js"></script>
+<!--<script type="text/javascript" src="//js.users.51.la/21415159.js"></script>-->
 
 <div id="box">
     <!-- 个人资料卡片 -->
