--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
 
 <!--<script type="text/javascript" src="//js.users.51.la/21415159.js"></script>-->
 
+<!--百度统计-->
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?a52ea876f9db22d2f411f4996578e8ab";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
+
+
 <div id="box">
     <!-- 个人资料卡片 -->
     <div class="meBox">
