--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
         <div class="meBox-text">
             <!--                <p>不是一条咸鱼<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>-->
-<!--            <p>知行合一.</p>-->
+<!--            <p>知行gapm合一.</p>-->
 
             <p>你是人间烟火不自知, </p>
             <p>我在俗世仰望应如是. </p>
