--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
             <!--                <p>不是一条咸鱼<img src="./img/fish.png" alt="咸鱼" style="width: 20px; vertical-align: middle;"></p>-->
 <!--            <p>知行gapm合一.</p>-->
 
+<!--            <p>竹亭，浊酒，明月。</p>-->
+<!--            <p>兴尽晚回舟。</p>-->
             <p>你是人间烟火不自知, </p>
             <p>我在俗世仰望应如是. </p>
             <p>——《青岛与诗》</p>
@@ -191,17 +193,15 @@
                 <p style="color: blue;">~</p>
                 <p>Never really desperate, only the lost of the soul. </p>
                 <p style="color: blue;">~</p>
-                <p style="color: blue;">~</p>
-                <p style="color: blue;">~</p>
-
                 <!--                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>-->
                 <!--                    <span style="color: blue;">echo</span>-->
-
-
                 <!--                    <p> > 寄语.text</p>-->
 
                 <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
-                <!--                    <span style="color: blue;">~</span>-->
+                <span style="color: blue;">vi 做人最基本的法则.md</span>
+                <p style="color: blue;">~</p>
+                <p>当与人为善，学会控制情绪，</p>
+                <p style="color: blue;">~</p>
             </div>
         </div>
     </div>
