--- a/index.html
+++ b/index.html
@@ -193,15 +193,17 @@
                 <p style="color: blue;">~</p>
                 <p>Never really desperate, only the lost of the soul. </p>
                 <p style="color: blue;">~</p>
+                <p style="color: blue;">~</p>
+                <p style="color: blue;">~</p>
                 <!--                    <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>-->
                 <!--                    <span style="color: blue;">echo</span>-->
                 <!--                    <p> > 寄语.text</p>-->
 
                 <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
-                <span style="color: blue;">vi 做人最基本的法则.md</span>
+<!--                <span style="color: blue;">vi 做人最基本的法则.md</span>-->
                 <p style="color: blue;">~</p>
-                <p>当与人为善，学会控制情绪，</p>
-                <p style="color: blue;">~</p>
+<!--                <p>当与人为善，学会控制情绪，</p>-->
+<!--                <p style="color: blue;">~</p>-->
             </div>
         </div>
     </div>
