--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
                 <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
                 <!--                    <span style="color: blue;">~</span>-->
                 <span style="color: blue;">cat me.txt</span>
-                <p>单身27，不胖不瘦，热爱健身，热爱程序设计。</p>
+                <p>单身27，不胖不瘦。</p>
+                <p>爱好：美食烹饪、魔术表演、游泳健身、旅行登高、动漫影视、程序设计</p>
                 <p>坐标杭州，Java开发工程师。</p>
                 <!--                    <p>爱好计算机，会去自学自己感兴趣的一切东西</p>-->
                 <!--                    <p>略懂H5，C#开发；爱好折腾去解决一切问题</p>-->
