--- a/index.html
+++ b/index.html
@@ -133,21 +133,11 @@
                         width="350" height="24" allowtransparency="true"></iframe>
                 <br/>
                 <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
-                <!--                    <span style="color: blue;">~</span>-->
                 <span style="color: blue;">cat me.txt</span>
                 <p>单身27，不胖不瘦。</p>
-                <p>爱好：美食烹饪、魔术表演、游泳健身、旅行登高、动漫影视、程序设计</p>
+                <p>爱好：程序设计、美食烹饪、魔术表演、游泳健身、旅行登高、动漫影视</p>
                 <p>坐标杭州，Java开发工程师。</p>
-                <!--                    <p>爱好计算机，会去自学自己感兴趣的一切东西</p>-->
-                <!--                    <p>略懂H5，C#开发；爱好折腾去解决一切问题</p>-->
-                <!--                    <p>同时我也很喜欢玩硬件，raspberry是我的最爱</p>-->
-                <!--                    <p>这条路我才刚刚迈开了我的第一步</p>-->
-                <!--                    <p>路上的坎一定会非常多，但</p>-->
-                <!--                    <p>在我眼里</p>-->
-                <!--                    <p>没有什么问题是尝试不能解决的，如果有那就多尝试几次甚至上百次</p>-->
-                <!--                    <p>即使前方的路看似绝境，也要有硬生生给自己开出一条路的勇气</p>-->
                 <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
-                <!--                    <span style="color: blue;">~</span>-->
                 <span style="color: blue">sudo rm -rf /所有的缺点和不足/*</span>
                 <p><span style="color: rgb(238, 154, 0)">Warning: </span><span>做人不要太贪心~</span></p>
             </div>
