--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="headPhoto"></div>
         <!-- 介绍 -->
         <div class="meBox-title">
-            <p>I'm ZhangXin</p>
+            <p>ZhangXin</p>
             <div class="fg"></div>
         </div>
         <div class="meBox-text">
