--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <br/>
                 <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
                 <span style="color: blue;">cat me.txt</span>
-                <p>单身27，不胖不瘦。</p>
+                <p>单身27，30岁的灵魂，20岁的外貌。</p>
                 <p>爱好：程序设计、美食烹饪、魔术表演、游泳健身、旅行登高、动漫影视</p>
                 <p>坐标杭州，Java开发工程师。</p>
                 <span style="color: rgb(0, 190, 0);">zhangxin@MacBook-Air ~ %</span>
